<resources>

    <!-- Nombre de la App -->
    <string name="app_name">ETSIT Noticias</string>

    <!-- Título de la actividad de ajustes -->
    <string name="title_activity_settings">Ajustes</string>

    <!-- Botón en la vista de detalle -->
    <string name="more_info">Más información</string>

    <!-- Relacionado con los menús -->
    <string name="action_share">Compartir</string>
    <string name="action_filter">Filtro</string>
    <string name="action_settings">Ajustes</string>

    <!-- Relacionado con el content provider -->
    <string name="content_authority">com.fjoglar.etsitnoticias</string>

    <!-- Relacionado con SharedPreferences y ajustes -->
    <string name="pref_last_updated_key" translatable="false">last_updated</string>

    <string name="pref_sync_frequency_key" translatable="false">sync_frequency</string>
    <string name="pref_sync_frequency_label">Frecuencia de sincronización</string>
    <string name="pref_sync_frequency_label_one">Cada hora</string>
    <string name="pref_sync_frequency_label_three">Cada 3 horas</string>
    <string name="pref_sync_frequency_label_six">Cada 6 horas</string>
    <string name="pref_sync_frequency_label_twelve">Cada 12 horas</string>
    <string name="pref_sync_frequency_label_twenty_four">Cada día</string>
    <string name="pref_sync_frequency_one">1</string>
    <string name="pref_sync_frequency_three">3</string>
    <string name="pref_sync_frequency_six">6</string>
    <string name="pref_sync_frequency_twelve">12</string>
    <string name="pref_sync_frequency_twenty_four">24</string>

    <string name="pref_send_notification_key" translatable="false">send_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notificaciones</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <string name="pref_filter_1_key">destacados</string>
    <string name="pref_filter_2_key">generales</string>
    <string name="pref_filter_3_key">conferencias</string>
    <string name="pref_filter_4_key">becas_practicas_empleo</string>
    <string name="pref_filter_5_key">tg_tfm</string>
    <string name="pref_filter_6_key">junta_escuela</string>
    <string name="pref_filter_7_key">investigación</string>
    <string name="pref_filter_8_key">otros</string>

    <string name="pref_rss_status_key" translatable="false">rss_status</string>

    <string name="pref_first_boot_key" translatable="false">first_boot</string>

    <string name="pref_is_in_foreground_key" translatable="false">is_in_foreground</string>

    <string name="pref_category_1_label">Webs de interés</string>
    <string name="pref_category_2_label">Sobre la App</string>
    <string name="pref_developed_by">Desarrollada por Felipe Joglar Santos</string>

    <!-- Determina que noticia hay que abrir en primera instancia para la versión de tablets -->
    <string name="pref_modify_item_id_key">modify_item_to_show</string>
    <string name="pref_item_id_key">item_to_show</string>

    <!-- Relacionado con Notificaciones -->
    <string name="pref_last_new_title_key" translatable="false">last_new_title</string>
    <string name="pref_last_new_title_default" translatable="false">Nueva noticia</string>
    <string name="notification_text">Tienes nuevas noticias</string>

    <!-- Relacionado con el resultado de la sincronización -->
    <string name="service_result">finalizado</string>

    <!-- Relacionado con contentDescription de ImageViews -->
    <string name="aitcyl_banner">AITCYL banner</string>
    <string name="etsit_banner">ETSIT banner</string>

    <!-- Relacionado con Filtro y Categorias -->
    <string name="title_filter">Filtro</string>
    <string name="filter_1">Avisos destacados</string>
    <string name="filter_2">Avisos generales</string>
    <string name="filter_3">Conferencias/Charlas/Talleres</string>
    <string name="filter_4">Ofertas de Becas/Prácticas/Empleo</string>
    <string name="filter_5">Avisos y Ofertas de TFG/TFM</string>
    <string name="filter_6">Junta de Escuela</string>
    <string name="filter_7">Investigación</string>
    <string name="filter_8">Otros</string>

    <!-- Texto de los estados vacíos de la lista -->
    <string name="empty_list">No hay información diponible.</string>
    <string name="empty_list_no_network">No hay información diponible. La conexión no está disponible para obtener los datos.</string>

</resources>
